# speechtranslation

./: CMakeLists.txt  README.md  data.split
attentional_model/: .cproject  .project  CMakeLists.txt  README.md  attentional-test.cc  attentional.cc  attentional.h  attentional_constraints.cc  attentional_constraints.h  attentional_mfcc.cc  attentional_mfcc.h  attentional_mfcc_bound.cc  attentional_mfcc_bound.h  attentional_mfcc_pretrain.bka.cc  attentional_mfcc_pretrain.bka.h  attentional_multiple_sources.cc  attentional_multiple_sources.h  attentional_plp.cc  attentional_ssem.cc  attentional_ssem.h  biattentional.cc  biattentional_phone.cc  clbl.cc  clbl.h  composite.h  corpus.cc  corpus.hh  corpus_old.cc  dam.cc  dam.h  encoder.hh  expr-xtra.h  feature_factory.h  hard_attentional.cc  hard_attentional.h  idclm.cc  markov-old.cc  markov.cc  markov_gen_alignment.hh  markov_mt_rnn-old.h  (+12 more)
attentional_model/clobbered/: attentional.cc  attentional.h
cnn/: README.md  data-util.cc  data-util.h  decode.h  dglstm.cc  dglstm.h  dict.cc  dict.h  expr-xtra.cc  expr-xtra.h  gru.h  init.cc  math-util.cc  math-util.h  nodes.cc  rnn.cc  rnn.h
data/: dev.attentional  rescore.pairs  test.attentional  train.attentional
data/plp/: 000100  000101  000102  000103  000104  000105  000106  000107  000108  000109  000110  000111  000112  000113  000114  000115  000116  000117  000118  000119  000120  000121  000122  000123  000124  000125  000126  000127  000128  000129  000130  000131  000132  000133  000134  000135  000136  000137  000138  000139  (+60 more)
data/text/: 000100  000101  000102  (+97 more)
